Changed font to Supreme
* Change font to Supreme-Variable
* Removed google-fonts

--- a/assets/settings.scss
+++ b/assets/settings.scss
@@ -1,4 +1,4 @@
-$family: 'Caveat', sans-serif;
+$family: 'Supreme-Variable', sans-serif;
 @use 'vuetify/settings' with (
     $body-font-family:  $family
 );
